<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gppmds.wikilegis.gppmds.wikilegis.view.RegisterUserFragmentTest"
    android:background="@drawable/background">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/firstNameField"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:hint="Nome"
        android:backgroundTint="#FAFAFA"
        android:textColorHint="#FAFAFA"
        android:textColor="#FFFFFF" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/lastNameField"
        android:layout_below="@+id/firstNameField"
        android:layout_centerHorizontal="true"
        android:hint="Sobrenome"
        android:backgroundTint="#FAFAFA"
        android:textColorHint="#FAFAFA"
        android:textColor="#FFFFFF"
        android:layout_marginTop="@dimen/abc_action_bar_overflow_padding_end_material" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailField"
        android:layout_below="@+id/lastNameField"
        android:layout_centerHorizontal="true"
        android:hint="E-mail"
        android:backgroundTint="#FAFAFA"
        android:textColorHint="#FAFAFA"
        android:textColor="#FFFFFF"
        android:layout_marginTop="@dimen/abc_action_bar_overflow_padding_end_material" />/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:layout_below="@+id/emailField"
        android:layout_centerHorizontal="true"
        android:hint="Senha"
        android:backgroundTint="#FAFAFA"
        android:textColorHint="#FAFAFA"
        android:textColor="#FFFFFF"
        android:layout_marginTop="@dimen/abc_action_bar_overflow_padding_end_material" />
    />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordConfirmationField"
        android:hint="Confirmação senha"
        android:textColorHint="#FAFAFA"
        android:textColor="#FAFAFA"
        android:backgroundTint="#FAFAFA"
        android:layout_below="@+id/passwordField"
        android:layout_toEndOf="@+id/imageViewPasswordUser"
        android:layout_alignParentLeft="false"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="@dimen/abc_action_bar_overflow_padding_end_material" />/>

    <Button
        android:layout_width="300px"
        android:layout_height="wrap_content"
        android:text="Cadastrar"
        android:id="@+id/registerButton"
        android:layout_marginTop="66dp"
        android:singleLine="false"
        android:nestedScrollingEnabled="true"
        android:focusable="false"
        android:clickable="false"
        android:background="#b2b2b2"
        android:textColor="#070707"
        android:textSize="14dp"
        android:layout_below="@+id/passwordConfirmationField"
        android:layout_centerHorizontal="true"
        android:allowUndo="false" />

    <ImageView
        android:layout_width="200px"
        android:layout_height="200px"
        android:src="@drawable/logo_white"
        android:id="@+id/imageViewLogo"
        android:layout_marginTop="39dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="60px"
        android:layout_height="60px"
        android:src="@drawable/user_name1"
        android:id="@+id/imageViewUserName"
        android:layout_alignTop="@+id/firstNameField"
        android:layout_toStartOf="@+id/firstNameField"
        android:layout_alignBottom="@+id/firstNameField" />

    <ImageView
        android:layout_width="60px"
        android:layout_height="60px"
        android:src="@drawable/user_name1"
        android:id="@+id/imageViewLastName"
        android:layout_alignTop="@+id/lastNameField"
        android:layout_toStartOf="@+id/lastNameField"
        android:layout_above="@+id/emailField" />

    <ImageView
        android:layout_width="60px"
        android:layout_height="60px"
        android:src="@drawable/email_user1"
        android:id="@+id/imageViewEmailUser"
        android:layout_alignBottom="@+id/emailField"
        android:layout_below="@+id/lastNameField"
        android:layout_alignStart="@+id/imageViewLastName" />

    <ImageView
        android:layout_width="60px"
        android:layout_height="60px"
        android:src="@drawable/password_user1"
        android:id="@+id/imageViewPasswordUser"
        android:layout_alignTop="@+id/passwordField"
        android:layout_toStartOf="@+id/passwordField"
        android:layout_alignBottom="@+id/passwordField" />

    <ImageView
        android:layout_width="60px"
        android:layout_height="60px"
        android:src="@drawable/password_user1"
        android:id="@+id/imageViewConfirmationPasswotd"
        android:layout_alignBottom="@+id/passwordConfirmationField"
        android:layout_toStartOf="@+id/passwordConfirmationField"
        android:layout_alignTop="@+id/passwordConfirmationField" />

</RelativeLayout>
</ScrollView>