...
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.MainActivity">

    <item
        android:id="@+id/action_profile_logged"
        android:title="@string/action_profile"
        android:icon="@drawable/settings"
        app:showAsAction="always"
        android:orderInCategory="1">
        <menu>
            <item
...
