...
    </string>
    <string name="title_activity_register_user">Wikilegis</string>
    <string name="action_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_exit_account">Exit Account</string>
    <string name="action_logout">Sair</string>
    <string name="action_login">Entrar</string>
    <string name="action_config">Configurações de download</string>
    <string name="action_report">Relatar Erro</string>
    <string name="sucessfull_registration_message">Cadastro efetuado com sucesso!</string>
    <string name="about_app">O Wikilegis é uma iniciativa da câmara dos deputados, que visa
        aproximar a sociedade e seus representantes políticos através de interação digital.
...
