...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:text="Não possui cadastro?"
        android:textColor="@color/abc_primary_text_material_dark"
        android:layout_below="@+id/loginButton"
        android:layout_toStartOf="@+id/registerText"
        android:layout_marginTop="91dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerText"
...
